comp imgs categorised in folders, names changed

--- a/packages/storybook-html/src/components/sections/sections.docs.mdx
+++ b/packages/storybook-html/src/components/sections/sections.docs.mdx
@@ -97,7 +97,7 @@ Scale background images on the section to always cover `uq-section--background-i
 
 ```html
 <div class="uq-section uq-section--image-behind">
-  <div class="uq-section__background"><img src="/images/uq-image-01.jpeg" /></div>
+  <div class="uq-section__background"><img src="/images/section/section-example-01.jpeg" /></div>
 </div>
 ```
 
