info,sucess,warning,alert (light, dark)

--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -261,28 +261,28 @@ These can be used as background colours to default text, e.g. alerts.
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--success"></div></td>
     <td className="uqds-table__item" data-title="Name:">Success</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$success-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$success-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#d5eeca</td>
     <td className="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--warning"></div></td>
     <td className="uqds-table__item" data-title="Name:">Warning</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$warning-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$warning-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#ffe0ad</td>
     <td className="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--danger"></div></td>
     <td className="uqds-table__item" data-title="Name:">Danger</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$danger-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$alert-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#ffacac</td>
     <td className="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--info"></div></td>
     <td className="uqds-table__item" data-title="Name:">Information</td>
-    <td className="uqds-table__item" data-title="Variable:"><code>$info-color</code></td>
+    <td className="uqds-table__item" data-title="Variable:"><code>$info-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#d4f0ff</td>
     <td className="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr>
