--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -35,21 +35,21 @@ These are the core brand colours for the University of Queensland. Refer to the 
     </tr>
     <tr  className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ purple</td>
+      <td className="uqds-table__item" data-title="Name:">UQ Purple</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="HEX:">#51247a</td>
       <td className="uqds-table__item" data-title="Usage:">Purple is UQ’s primary identifying colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--white"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ white</td>
+      <td className="uqds-table__item" data-title="Name:">UQ White</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
       <td className="uqds-table__item" data-title="HEX:">#ffffff</td>
       <td className="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--black"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ black</td>
+      <td className="uqds-table__item" data-title="Name:">UQ Black</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-black</code></td>
       <td className="uqds-table__item" data-title="HEX:">#000000</td>
       <td className="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
@@ -150,7 +150,7 @@ Neutral tones can be used as a background colour.
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--darkgrey"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ darkgrey</td>
+      <td className="uqds-table__item" data-title="Name:">UQ Darkgrey</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey</code></td>
       <td className="uqds-table__item" data-title="HEX:">#999490</td>
       <td className="uqds-table__item" data-title="Usage:">Neutral tones</td>
