Colour doc additional amends

--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -181,12 +181,12 @@ The SASS function 'mix' is used to create variants for UQ neutral tones only. In
 
 ### Light backgrounds
 
+The light grey colour is a lighter variant of UQ Neutral colour produced by SASS function 'mix', 
+e.g. <code>mix(white, $color, $percentage);</code>. The percentage value '100%' would turn the colour to white.
+
+It's darker variants is produced by SASS function 'mix', e.g. <code>mix(black, $color, $percentage);</code>. The percentage value '100%' would turn the colour to black.
+
 These can be used with dark and purple text.
-
-The light grey colour is a lighter variant of UQ Neutral colour produced by SASS function 'mix', e.g. <code>mix(white, $color, $percentage);</code>. The percentage value '100%' would turn the colour to white.
-
-Its darker variants is produced by SASS function 'mix', e.g. <code>mix(black, $color, $percentage);</code>. In this case, percentage value '100%' would turn the colour to black.
-
 
 <table className="uqds-table uqds-table--card  uqds-table--colour">
 <tbody className="uqds-table__body">
@@ -268,28 +268,28 @@ These light colours are lighter variants of its corresponding UQ brand colours p
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--info"></div></td>
-    <td className="uqds-table__item" data-title="Name:">Information</td>
+    <td className="uqds-table__item" data-title="Name:">Information light</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$info-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#dde9f5</td>
     <td className="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--success"></div></td>
-    <td className="uqds-table__item" data-title="Name:">Success</td>
+    <td className="uqds-table__item" data-title="Name:">Success light</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$success-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#dff6e0</td>
     <td className="uqds-table__item" data-title="Usage:">Success, available</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--warning"></div></td>
-    <td className="uqds-table__item" data-title="Name:">Warning</td>
+    <td className="uqds-table__item" data-title="Name:">Warning light</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$warning-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#fff0c8</td>
     <td className="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr className="uqds-table__row">
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--alert"></div></td>
-    <td className="uqds-table__item" data-title="Name:">Alert</td>
+    <td className="uqds-table__item" data-title="Name:">Alert light</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$alert-light</code></td>
     <td className="uqds-table__item" data-title="HEX:">#f6afbb</td>
     <td className="uqds-table__item" data-title="Usage:">Error, unavailable; there <em>is</em> a problem</td>
