--- a/packages/storybook-html/src/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-apply.story.mdx
@@ -177,14 +177,7 @@ Backgrounds are used to differentiate parts of an interface, and to create conta
 
 See for example: Sections, Cards, Table -- *add links eventually*
 
-The SASS function 'mix' is used to create variants for UQ neutral tones only. In all other UQ primary or secondary colours, the SASS function 'lighten' or 'darken' is used to create it's variants.
-
 ### Light backgrounds
-
-The light grey colour is a lighter variant of UQ Neutral colour produced by SASS function 'mix', 
-e.g. <code>mix(white, $color, $percentage);</code>. The percentage value '100%' would turn the colour to white.
-
-It's darker variants is produced by SASS function 'mix', e.g. <code>mix(black, $color, $percentage);</code>. The percentage value '100%' would turn the colour to black.
 
 These can be used with dark and purple text.
 
@@ -255,8 +248,6 @@ These colours can only be used for components which alert a user or display a st
 
 These can be used as background colours to default text, e.g. alerts.
 
-These light colours are lighter variants of its corresponding UQ brand colours produced by SASS function 'lighten', e.g. <code>$info-light: lighten($uq-blue, 40%);</code>
-
 <table className="uqds-table uqds-table--card uqds-table--colour">
 <tbody className="uqds-table__body">
   <tr className="uqds-table__mobile-heading">
@@ -270,7 +261,7 @@ These light colours are lighter variants of its corresponding UQ brand colours p
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--info"></div></td>
     <td className="uqds-table__item" data-title="Name:">Information light</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$info-light</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#dde9f5</td>
+    <td className="uqds-table__item" data-title="HEX:">#bbd8f5</td>
     <td className="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr>
   <tr className="uqds-table__row">
@@ -302,8 +293,6 @@ These light colours are lighter variants of its corresponding UQ brand colours p
 
 These can be used on a white background or as background colours to white text, e.g. form validation errors.
 
-Some of these dark colours are darker variants of its corresponding UQ brand colour produced by SASS function 'darken', e.g. <code>$alert: darken($uq-red, 20%);</code>
-
 <table className="uqds-table uqds-table--card uqds-table--colour">
 <tbody className="uqds-table__body">
   <tr className="uqds-table__mobile-heading">
@@ -317,7 +306,7 @@ Some of these dark colours are darker variants of its corresponding UQ brand col
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--blue"></div></td>
     <td className="uqds-table__item" data-title="Name:">Information</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$info</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#4085C6</td>
+    <td className="uqds-table__item" data-title="HEX:">#1e72c6</td>
     <td className="uqds-table__item" data-title="Usage:">Information that is neither positive or negative but important to know</td>
   </tr> 
   <tr  className="uqds-table__row">
@@ -331,7 +320,7 @@ Some of these dark colours are darker variants of its corresponding UQ brand col
     <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--yellow"></div></td>
     <td className="uqds-table__item" data-title="Name:">Warning</td>
     <td className="uqds-table__item" data-title="Variable:"><code>$warning</code></td>
-    <td className="uqds-table__item" data-title="HEX:">#FBB800</td>
+    <td className="uqds-table__item" data-title="HEX:">#fbb800</td>
     <td className="uqds-table__item" data-title="Usage:">Warning; there <em>may</em> be a problem</td>
   </tr>
   <tr  className="uqds-table__row">
