--- a/packages/storybook-html/src/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/src/components/core/colour-base.story.mdx
@@ -35,21 +35,21 @@ These are the core brand colours for the University of Queensland. Refer to the 
     </tr>
     <tr  className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Purple</td>
+      <td className="uqds-table__item" data-title="Name:">UQ purple</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple</code></td>
       <td className="uqds-table__item" data-title="HEX:">#51247a</td>
       <td className="uqds-table__item" data-title="Usage:">Purple is UQ’s primary identifying colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--white"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ White</td>
+      <td className="uqds-table__item" data-title="Name:">UQ white</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-white</code></td>
       <td className="uqds-table__item" data-title="HEX:">#ffffff</td>
       <td className="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--black"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Black</td>
+      <td className="uqds-table__item" data-title="Name:">UQ black</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-black</code></td>
       <td className="uqds-table__item" data-title="HEX:">#000000</td>
       <td className="uqds-table__item" data-title="Usage:">Primary UQ Colour</td>
@@ -72,56 +72,56 @@ These secondary colours should always play a supporting role to our primary colo
     </tr>
     <tr  className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--purple-light"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Purple Light</td>
+      <td className="uqds-table__item" data-title="Name:">UQ purple light</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-purple-light</code></td>
       <td className="uqds-table__item" data-title="HEX:">#962a8b</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--gold"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Gold</td>
+      <td className="uqds-table__item" data-title="Name:">UQ gold</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-gold</code></td>
       <td className="uqds-table__item" data-title="HEX:">#bb9d65</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--red"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Red</td>
+      <td className="uqds-table__item" data-title="Name:">UQ red</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-red</code></td>
       <td className="uqds-table__item" data-title="HEX:">#e62645</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--orange"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Orange</td>
+      <td className="uqds-table__item" data-title="Name:">UQ orange</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-orange</code></td>
       <td className="uqds-table__item" data-title="HEX:">#eb602e</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--yellow"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Yellow</td>
+      <td className="uqds-table__item" data-title="Name:">UQ yellow</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-yellow</code></td>
       <td className="uqds-table__item" data-title="HEX:">#fbb800</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--blue"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Blue</td>
+      <td className="uqds-table__item" data-title="Name:">UQ blue</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-blue</code></td>
       <td className="uqds-table__item" data-title="HEX:">#4085c6</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--aqua"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Aqua</td>
+      <td className="uqds-table__item" data-title="Name:">UQ aqua</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-aqua</code></td>
       <td className="uqds-table__item" data-title="HEX:">#00a2c7</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--green"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Green</td>
+      <td className="uqds-table__item" data-title="Name:">UQ green</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-green</code></td>
       <td className="uqds-table__item" data-title="HEX:">#2ea836</td>
       <td className="uqds-table__item" data-title="Usage:">Secondary UQ Colour</td>
@@ -143,14 +143,14 @@ Neutral tones can be used as a background colour.
     </tr>
     <tr  className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--neutral"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Neutral</td>
+      <td className="uqds-table__item" data-title="Name:">UQ neutral</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-neutral</code></td>
       <td className="uqds-table__item" data-title="HEX:">#d7d1cc</td>
       <td className="uqds-table__item" data-title="Usage:">Neutral tones</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><div className="uqds-colour__palette uqds-colour--darkgrey"></div></td>
-      <td className="uqds-table__item" data-title="Name:">UQ Darkgrey</td>
+      <td className="uqds-table__item" data-title="Name:">UQ dark grey</td>
       <td className="uqds-table__item" data-title="Variable:"><code>$uq-darkgrey</code></td>
       <td className="uqds-table__item" data-title="HEX:">#999490</td>
       <td className="uqds-table__item" data-title="Usage:">Neutral tones</td>
