Font, Space size variables made consistent

--- a/packages/storybook-html/src/components/core/breakpoints.story.mdx
+++ b/packages/storybook-html/src/components/core/breakpoints.story.mdx
@@ -44,14 +44,14 @@ example:
 @media #{core.$screen-md-up} {
   .example-class {
     // Target the MD (tablet) breakpoint & up
-    font-size: core.$font-size-m;
+    font-size: core.$font-size;
   }
 }
 
 @media #{core.$screen-xl-up} {
   .example-class {
     // Target the XL (desktop) breakpoint & up
-    font-size: core.$font-size-l;
+    font-size: core.$font-size-m;
   }
 }
 ```
