--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -34,7 +34,7 @@ Use this basic spacing scale when building individual components. It includes sm
   <tr>
     <td>8</td>
     <td>0.5</td>
-    <td><code>$space-sm</code></td>
+    <td><code>$space-s</code></td>
     <td>Small</td>
     <td><div className="uqds-space uqds-space-sm"></div></td>
   </tr>
@@ -48,14 +48,14 @@ Use this basic spacing scale when building individual components. It includes sm
   <tr>
     <td>24</td>
     <td>1.5</td>
-    <td><code>$space-md</code></td>
+    <td><code>$space-m</code></td>
     <td>Medium</td>
     <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
-    <td><code>$space-lg</code></td>
+    <td><code>$space-l</code></td>
     <td>Large</td>
     <td><div className="uqds-space uqds-space-lg"></div></td>
   </tr>
@@ -140,7 +140,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
   <tr>
     <td>24</td>
     <td>1.5</td>
-    <td><code>$space-md</code></td>
+    <td><code>$space-m</code></td>
     <td>Medium</td>
     <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
@@ -204,9 +204,9 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Container size</td>
-    <td><div className="uqds-container uqds-container-space-lg"><code>$space-lg;</code></div></td>
+    <td><div className="uqds-container uqds-container-space-lg"><code>$space-l;</code></div></td>
     <td>
-      <code>padding:$space-lg;</code>
+      <code>padding:$space-l;</code>
       <ul>
         <li>adjust space using available space scale variables</li>
         <li>Space increments are used to control the density</li>
@@ -215,9 +215,9 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Compressed</td>
-    <td><div className="uqds-container uqds-compressed-space-lg"><code>$space-compressed-lg $space-lg;</code></div></td>
+    <td><div className="uqds-container uqds-compressed-space-lg"><code>$space-compressed-l $space-l;</code></div></td>
     <td>
-      <code>paddding:$space-compressed-lg $space-lg;</code>
+      <code>paddding:$space-compressed-l $space-l;</code>
       <ul>
         <li>Reduces the top and bottom padding</li>
         <li>Creates better spacing balance for cell-like containers</li>
@@ -292,10 +292,10 @@ Stacks content vertically, applying top margin.
     <td>Stacked large</td>
     <td>
       <div className="uqds-container">
-        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-stacked-space-lg"><code>$space-l;</code></div>
       </div>
     </td>
     <td>
@@ -358,10 +358,10 @@ Arrange objects inline horizontally, applying right margin.
     <td>Inline large</td>
     <td>
       <div className="uqds-container">
-        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
-        <div className="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-l;</code></div>
+        <div className="uqds-inline-space-lg"><code>$space-l;</code></div>
       </div>
     </td>
     <td>
@@ -428,7 +428,7 @@ This chart provides a guide to multiples of 8.
   <tr>
     <td>8</td>
     <td>0.5</td>
-    <td><code>$space-sm</code></td>
+    <td><code>$space-s</code></td>
     <td>Small</td>
     <td><div className="uqds-space uqds-space-sm"></div></td>
   </tr>
@@ -442,14 +442,14 @@ This chart provides a guide to multiples of 8.
   <tr>
     <td>24</td>
     <td>1.5</td>
-    <td><code>$space-md</code></td>
+    <td><code>$space-m</code></td>
     <td>Medium</td>
     <td><div className="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
-    <td><code>$space-lg</code></td>
+    <td><code>$space-l</code></td>
     <td>Large</td>
     <td><div className="uqds-space uqds-space-lg"></div></td>
   </tr>
