--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -68,7 +68,7 @@ export const TypographyUsage = () => `
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><h1>H1 header</h1></td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxxl</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
@@ -77,7 +77,7 @@ export const TypographyUsage = () => `
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><h2>H2 header</h2></td>
       <td className="uqds-table__item" data- stitle="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxl</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
@@ -86,7 +86,7 @@ export const TypographyUsage = () => `
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><h3>H3 header</h3></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxl</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
@@ -95,7 +95,7 @@ export const TypographyUsage = () => `
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><p>Paragraph text</p></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
@@ -105,7 +105,7 @@ Font size should be a minimum of 16px.</td>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><strong>Strong text</strong></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
@@ -114,7 +114,7 @@ Font size should be a minimum of 16px.</td>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><em>Emphasis text</em></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
