--- a/packages/storybook-html/src/docs/introduction/get-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/get-started.story.mdx
@@ -73,7 +73,7 @@ your Sass files. For example,
 @use '@uqds/core/src/scss/global' as *;
 
 .example-class {
-  font-size: core.$font-size-xxl;
+  font-size: core.$font-size-xl;
 }
 ```
 
