--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -96,7 +96,7 @@ We use 16px as the base or deafult for most browsers and devices.
     <tr>
       <td>3</td>
       <td>48</td>
-      <td>$font-size-xxxxxl</td>
+      <td>$font-size-xxxxl</td>
     </tr>
   </tbody>
 </table>
